--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "rap2hpoutre/laravel-log-viewer": "^1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
